--- a/src/main/webapp/centrality.html
+++ b/src/main/webapp/centrality.html
@@ -20,7 +20,58 @@
 String.prototype.replaceAll = function(target, replacement) {
 	return this.split(target).join(replacement);
 };
-function calculateCentralityMetric(){
+function calculateCentralityMetric2(){
+
+	
+	// show searching label and disable button from further submit clicks.	
+	document.getElementById('divSearch').style.visibility = 'visible';		
+	enableCalculateButton();
+
+	
+	/*
+	*
+	*		Step 1: Get the graphName
+	*		Step 2: Get the selected Node
+	*		Step 3: Get selected Metric
+	*		Step 4: Make an http request
+	*/
+
+	// step 1
+//	var graphName = getCookie('graphName');
+
+	// step 2
+//	var Node1 = getCookie('selectedNode1');
+//	Node1 = Node1.replaceAll("/","$");
+//	Node1 = Node1.replaceAll("#","&");
+	
+	// step 3
+//	var metric = $('input[name=metricRadio]:checked').val();
+
+	// step 4
+	var xhttp = new XMLHttpRequest();
+	
+	xhttp.onreadystatechange = function() {
+		if (xhttp.readyState == 4 && xhttp.status == 200) {
+			console.log(xhttp.responseText);
+			$('#centrality_result').html(xhttp.responseText);
+			
+			document.getElementById('divSearch').style.visibility = 'hidden';		
+			enableCalculateButton();
+			
+			alert(xhttp.responseText);
+
+		}
+	}
+	
+	var graphName = "sib200";
+	var Node1 = "<http:$$www.ins.cwi.nl$sib$user$u66>";
+	var metric = "4";
+
+	xhttp.open("GET", REST_API + "calculateCentrality/" + graphName +"/"+ Node1 +"/"+ metric, true);
+	xhttp.send();
+}
+
+function calculateCentralityMetric1(){
 
 	
 	// show searching label and disable button from further submit clicks.	
@@ -69,9 +120,8 @@ function calculateCentralityMetric(){
 
 	xhttp.open("GET", REST_API + "calculateCentrality/" + graphName +"/"+ Node1 +"/"+ metric, true);
 	xhttp.send();
-	
-	
 }
+
 //this is for the centrality page.
 function enableCalculateButton(){
 
@@ -227,7 +277,10 @@ keyframes ellipsis {to { width:20px;
 			</div>
 			<div class="form-group" style="margin: 20px">
 				<label> <a class="btn btn-success" id="btnSubmit" role="button" data-loading-text="Searching for connectons..."
-					onClick="calculateCentralityMetric()"><span class="glyphicon glyphicon-search" aria-hidden="true"></span> Calculate</a>
+					onClick="calculateCentralityMetric1()"><span class="glyphicon glyphicon-search" aria-hidden="true"></span> Calculate</a>
+				</label>
+				<label> <a class="btn btn-success" id="btnSubmit" role="button" data-loading-text="Searching for connectons..."
+					onClick="calculateCentralityMetric2()"><span class="glyphicon glyphicon-search" aria-hidden="true"></span> Calculate</a>
 				</label>
 			</div>
 			<div id="divSearch" style="visibility: hidden;" class="loading">
