Renames the 'Key' to 'Legend'.

--- a/src/main/webapp/browser.html
+++ b/src/main/webapp/browser.html
@@ -187,7 +187,7 @@
 				<div id="actionBtns" class="btn-group" role="group" aria-label="Actions">
 					<div class="btn-group" role="group">
 						<button id="btnShowKey" type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" disabled>
-							<span class="glyphicon glyphicon-question-sign" aria-hidden="true"></span> Key <span class="caret"></span>
+							<span class="glyphicon glyphicon-question-sign" aria-hidden="true"></span> Legend <span class="caret"></span>
 						</button>
 						<ul id="keyForUsedColors" class="dropdown-menu">
 							<li><span class="glyphicon glyphicon-screenshot"></span><span class="colorIndicator central"></span> Central Node</li>
