--- a/src/main/webapp/browser.html
+++ b/src/main/webapp/browser.html
@@ -12,6 +12,11 @@
 <script type="text/javascript" src="js/bootstrap/bootstrap-slider.min.js"></script>
 <script type="text/javascript" src="js/mustache/mustache.min.js"></script>
 
+<script src="js/linkurious/sigma.min.js"></script>
+<script src="js/linkurious/plugins.min.js"></script>
+<script src="js/linkurious/sigma.canvas.nodes.rect.js"></script>
+<script src="js/linkurious/sigma.canvas.hovers.rect.js"></script>
+
 <script type="text/javascript" src="js/app-config.js"></script>
 <script type="text/javascript" src="js/browser.config.js"></script>
 <script type="text/javascript" src="js/browser.entrypoint.js"></script>
@@ -21,20 +26,6 @@
 <script type="text/javascript" src="js/browser.visual.js"></script>
 <script type="text/javascript" src="js/browser.window.js"></script>
 <script type="text/javascript" src="js/utility.js"></script>
-
-<script src="js/linkurious/sigma.min.js"></script>
-<script src="js/linkurious/plugins.min.js"></script>
-<script src="js/linkurious/plugins/sigma.canvas.nodes.rect.js"></script>
-<script src="js/linkurious/plugins/sigma.canvas.hovers.rect.js"></script>
-<!--<script src="js/linkurious/plugins/sigma.exporters.image.min.js"></script>
-<script src="js/linkurious/plugins/sigma.exporters.svg.min.js"></script>
-<script src="js/linkurious/plugins/sigma.layouts.noverlap.min.js"></script>
-<script src="js/linkurious/plugins/sigma.plugins.animate.min.js"></script>
-<script src="js/linkurious/plugins/sigma.plugins.design.min.js"></script>
-<script src="js/linkurious/plugins/sigma.plugins.tooltips.min.js"></script>
-<script src="js/linkurious/plugins/sigma.renderers.customEdgeShapes.min.js"></script>
-<script src="js/linkurious/plugins/sigma.renderers.edgeLabels.min.js"></script>
-<script src="js/linkurious/plugins/sigma.renderers.linkurious.min.js"></script>-->
 
 <script type="text/javascript">
 	function getGraphName() {
