Optimizes the appearance of suggested nodes.

--- a/src/main/webapp/browser.html
+++ b/src/main/webapp/browser.html
@@ -130,9 +130,13 @@
 				</button>
 			</div>
 
-			<div id="suggestions" class="col-lg-6" style="padding-left: 0;">
+			<div id="suggestions" class="col-lg-8" style="padding-left: 0;">
 				<h2>Suggested entry points</h2>
-				<p>Here we recommend some possible entry points that may be interesting for you.</p>
+				<p>
+					Here we recommend some possible entry points that may be interesting for you.<br>
+					<span class="glyphicon glyphicon-info-sign" aria-hidden="true"></span> 
+					The number in parentheses is the computed PageRank for the respective node.
+				</p>
 
 				<div id="suggestionsList">
 					<p>Retrieving the suggested entry points ...</p>
