Orders suggestions by PageRank.

--- a/src/main/webapp/browser.html
+++ b/src/main/webapp/browser.html
@@ -135,7 +135,7 @@
 				<p>
 					Here we recommend some possible entry points that may be interesting for you.<br>
 					<span class="glyphicon glyphicon-info-sign" aria-hidden="true"></span> 
-					The number in parentheses is the computed PageRank for the respective node.
+					The number in brackets is the computed PageRank for the respective node.
 				</p>
 
 				<div id="suggestionsList">
