--- a/src/main/webapp/browser.html
+++ b/src/main/webapp/browser.html
@@ -12,10 +12,14 @@
 <script type="text/javascript" src="js/bootstrap/bootstrap-slider.min.js"></script>
 <script type="text/javascript" src="js/mustache/mustache.min.js"></script>
 
+<!--
 <script src="js/linkurious/sigma.min.js"></script>
 <script src="js/linkurious/plugins.min.js"></script>
 <script src="js/linkurious/sigma.canvas.nodes.rect.js"></script>
 <script src="js/linkurious/sigma.canvas.hovers.rect.js"></script>
+-->
+
+<script src="js/cytoscape/cytoscape.js"></script>
 
 <script type="text/javascript" src="js/app-config.js"></script>
 <script type="text/javascript" src="js/browser.config.js"></script>
