--- a/src/main/webapp/browser.html
+++ b/src/main/webapp/browser.html
@@ -5,28 +5,25 @@
 <link rel="stylesheet" type="text/css" href="bootstrap.css">
 <link rel="stylesheet" type="text/css" href="css/browser.css">
 <link rel="stylesheet" type="text/css" href="css/bootstrap-slider.min.css">
+<link rel="stylesheet" type="text/css" href="css/jquery.qtip.min.css">
 
 <script type="text/javascript" src="js/jquery/jquery-3.1.1.min.js"></script>
+<script type="text/javascript" src="js/jquery/jquery.qtip.min.js"></script>
 <script type="text/javascript" src="js/jquery/jquery.shorten.1.0.min.js"></script>
 <script type="text/javascript" src="js/bootstrap/bootstrap.min.js"></script>
 <script type="text/javascript" src="js/bootstrap/bootstrap-slider.min.js"></script>
 <script type="text/javascript" src="js/mustache/mustache.min.js"></script>
 
-<!--
-<script src="js/linkurious/sigma.min.js"></script>
-<script src="js/linkurious/plugins.min.js"></script>
-<script src="js/linkurious/sigma.canvas.nodes.rect.js"></script>
-<script src="js/linkurious/sigma.canvas.hovers.rect.js"></script>
--->
-
 <script src="js/cytoscape/cytoscape.js"></script>
+<script src="js/cytoscape/cytoscape.qtip.js"></script>
+<script src="js/cytoscape/cytoscape.spread.js"></script>
 
 <script type="text/javascript" src="js/app-config.js"></script>
 <script type="text/javascript" src="js/browser.config.js"></script>
+<script type="text/javascript" src="js/browser.cytoscape.js"></script>
 <script type="text/javascript" src="js/browser.entrypoint.js"></script>
 <script type="text/javascript" src="js/browser.entrypoint.suggested.js"></script>
 <script type="text/javascript" src="js/browser.history.js"></script>
-<script type="text/javascript" src="js/browser.sigma.settings.js"></script>
 <script type="text/javascript" src="js/browser.textual.js"></script>
 <script type="text/javascript" src="js/browser.visual.js"></script>
 <script type="text/javascript" src="js/browser.window.js"></script>
