Uses minified file.

--- a/src/main/webapp/browser.html
+++ b/src/main/webapp/browser.html
@@ -15,7 +15,7 @@
 <script type="text/javascript" src="js/bootstrap/bootstrap-slider.min.js"></script>
 <script type="text/javascript" src="js/mustache/mustache.min.js"></script>
 
-<script src="js/cytoscape/cytoscape.js"></script>
+<script src="js/cytoscape/cytoscape.min.js"></script>
 <script src="js/cytoscape/cytoscape.cola.js"></script>
 <script src="js/cytoscape/cytoscape.qtip.js"></script>
 <script src="js/cytoscape/cytoscape.spread.js"></script>
