Adds clear-fix for suggestions.

--- a/src/main/webapp/browser.html
+++ b/src/main/webapp/browser.html
@@ -145,6 +145,7 @@
 						<div class="progress-bar progress-bar-success" style="width: 100%;"></div>
 					</div>
 				</div>
+				<br style="clear: both;">
 			</div>
 		</div>
 
