Removes unnecessary layout options.

--- a/src/main/webapp/browser.html
+++ b/src/main/webapp/browser.html
@@ -75,11 +75,9 @@
 					<div>
 						<label for="browsingType">Select how you want to layout the nodes</label>
 						<select class="form-control" id="browsingType">
-							<option value="COLA">Cola</option>
+							<option value="COLA">Using the Cola layout</option>
 							<option value="GRID">In a grid</option>
-							<option value="SPREAD">Spreaded</option>
-							<option value="RANDOM">Randomly</option>
-							<option value="TEXTUAL">NO LAYOUT - I prefer textual browsing!</option>
+							<option value="TEXTUAL">No layout - use textual browsing</option>
 						</select>
 					</div>
 
