--- a/src/main/webapp/browser.html
+++ b/src/main/webapp/browser.html
@@ -33,7 +33,7 @@
 </head>
 
 <body onload="getGraphName(); getSuggestedEntryPoints();">
-	<div class="navbar navbar-inverse" style="background-color: rgba(70, 130, 180, 0.95);">
+	<div class="navbar navbar-inverse" style="background-color: rgba(70, 130, 180, 0.95); border-radius: 0;">
 		<div class="navbar-header">
 			<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-inverse-collapse">
 				<span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span>
@@ -47,8 +47,8 @@
 		</div>
 	</div>
 
-	<form id="IDbardh" onsubmit="simulateClickOnSearch(); return false;" class="form-horizontal col-md-10 col-md-offset-1"
-		style="padding-bottom: 20px; background-color: rgba(70, 130, 180, 0.95); border-radius: 15px" action="" method="post">
+	<form id="IDbardh" onsubmit="simulateClickOnSearch(); return false;" class="form-horizontal col-lg-12"
+		style="padding-bottom: 20px; background-color: rgba(70, 130, 180, 0.95);" action="" method="post">
 		<br>
 		<fieldset>
 			<nav class="navbar navbar-default">
@@ -129,20 +129,40 @@
 				</button>
 			</div>
 
-			<div id="suggestions" class="col-lg-8" style="padding-left: 0;">
+			<div id="suggestions" style="padding-left: 0;">
 				<h2>Suggested entry points</h2>
 				<p>
-					Here we recommend some possible entry points that may be interesting for you.<br>
-					<span class="glyphicon glyphicon-info-sign" aria-hidden="true"></span> 
-					The number in brackets is the computed PageRank for the respective node.
+					Here we recommend some possible entry points that may be interesting for you. 
+					On one hand we provide interesting suggestions based on the PageRank values of the nodes.
+					On the other hand the suggestions are based on a centrality measure.
 				</p>
 
-				<div id="suggestionsList">
-					<p>Retrieving the suggested entry points ...</p>
-					<div class="progress progress-striped active page-progress-bar">
-						<div class="progress-bar progress-bar-success" style="width: 100%;"></div>
+				<div>
+					<p>
+						<span class="glyphicon glyphicon-info-sign" aria-hidden="true"></span> 
+						The number in brackets is the computed PageRank for the respective node.
+					</p>
+					<div id="suggestionsLeft" class="suggestionsList">
+						<p>Retrieving the suggested entry points regarding PageRank ...</p>
+						<div class="progress progress-striped active page-progress-bar">
+							<div class="progress-bar progress-bar-success" style="width: 100%;"></div>
+						</div>
 					</div>
 				</div>
+
+				<div style="clear: both;">
+					<p>
+						<span class="glyphicon glyphicon-info-sign" aria-hidden="true"></span> 
+						The number in brackets is the computed Centrality value for the respective node.
+					</p>
+					<div id="suggestionsRight" class="suggestionsList">
+						<p>Retrieving the suggested entry points regarding Centrality ...</p>
+						<div class="progress progress-striped active page-progress-bar">
+							<div class="progress-bar progress-bar-success" style="width: 100%;"></div>
+						</div>
+					</div>
+				</div>
+
 				<br style="clear: both;">
 			</div>
 		</div>
