Highlights the underlying metric.

--- a/src/main/webapp/browser.html
+++ b/src/main/webapp/browser.html
@@ -140,7 +140,7 @@
 				<div>
 					<p>
 						<span class="glyphicon glyphicon-info-sign" aria-hidden="true"></span> 
-						The number in brackets is the computed PageRank for the respective node.
+						The number in brackets is the computed <strong>PageRank</strong> for the respective node.
 					</p>
 					<div id="suggestionsLeft" class="suggestionsList">
 						<p>Retrieving the suggested entry points regarding PageRank ...</p>
@@ -153,7 +153,7 @@
 				<div style="clear: both;">
 					<p>
 						<span class="glyphicon glyphicon-info-sign" aria-hidden="true"></span> 
-						The number in brackets is the computed Centrality value for the respective node.
+						The number in brackets is the computed <strong>Closeness Centrality</strong> value for the respective node.
 					</p>
 					<div id="suggestionsRight" class="suggestionsList">
 						<p>Retrieving the suggested entry points regarding Centrality ...</p>
