Splits the suggestions in two columns.

--- a/src/main/webapp/browser.html
+++ b/src/main/webapp/browser.html
@@ -137,7 +137,7 @@
 					On the other hand the suggestions are based on a centrality measure.
 				</p>
 
-				<div>
+				<div style="float: left; width: 47%;">
 					<p>
 						<span class="glyphicon glyphicon-info-sign" aria-hidden="true"></span> 
 						The number in brackets is the computed <strong>PageRank</strong> for the respective node.
@@ -150,7 +150,7 @@
 					</div>
 				</div>
 
-				<div style="clear: both;">
+				<div style="float: right; width: 47%;">
 					<p>
 						<span class="glyphicon glyphicon-info-sign" aria-hidden="true"></span> 
 						The number in brackets is the computed <strong>Closeness Centrality</strong> value for the respective node.
